[gd_scene load_steps=3 format=2]

[ext_resource path="res://TowerRelated/AbstractAttackModule.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="AbstractAttackModule" type="Node2D"]
script = ExtResource( 1 )

[node name="Range" type="Area2D" parent="."]

[node name="RangeShape" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )
[connection signal="area_shape_entered" from="Range" to="." method="_on_Range_area_shape_entered"]
[connection signal="area_shape_exited" from="Range" to="." method="_on_Range_area_shape_exited"]
